# BrowserAI

./: .gitignore  README.md  app.py  client.js  index.html  index.js  key_state.json  package-lock.json  package.json  prompt-orchestrator.txt  prompt-summarizer.txt  prompt.txt  pyproject.toml  requirements.txt  style.css  zoom_cookies.pkl
static/: script.js  style.css
templates/: index.html
